test/test-files/analyzer/enums/error-duplicate-item-name/exception.out
Semantic error in : ./test-files/analyzer/enums/error-duplicate-item-name/source.spice:4:5:
Duplicate enum item name: Duplicate enum item name, please use another

ITEM_NAME
^^^^^^^^^